cmake_minimum_required(VERSION 3.21)
project(csescpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(csescpp main.cpp Graph/TopologicalSort.h ProblemAnalysis/Instructive/DP/DP_log_optimazation_E_RLE_atcoderABC249.h ProblemAnalysis/Instructive/DP/Nice_mental_solution_Keep_Connect_atcoderABC248.h ProblemAnalysis/ForJohnsonDawodu/Robot_Versus_Fan_csacademy.h)
